--- a/Internet-e-web/trabalho_1/projeto_2/agenda.html
+++ b/Internet-e-web/trabalho_1/projeto_2/agenda.html
@@ -5,9 +5,8 @@
 	 <meta charset="UTF-8"> 
 </head>
 <body>
-<h1>Lista dos meus telefones</h1>
-	<p>Universidade: (082) 3214-1401</p>
-	<p>Pessoal: (082) 3325-3114</p>
+	<h1>Lista dos meus telefones</h1>
+	<p>Whatsapp: (082) 9915-1431</p>
 	<p>Clique <a href="index.html">AQUI</a> apra voltar ao homepage</p>
 </body>
 </html>
