trabalho de IWEB concluido

--- a/primeiro-periodo/internet-e-web/trabalho_1/projeto_4/index.html
+++ b/primeiro-periodo/internet-e-web/trabalho_1/projeto_4/index.html
@@ -5,7 +5,7 @@
 	<script>
 		function checa() {
 			var a = document.forms[0].nome.value;
-			alert("Você digitou: " + a + "\nA respota esperada é: Marechal Deodoro")
+			alert("Você digitou: " + a + "\nA resposta esperada é: Marechal Deodoro")
 		}
 	</script>
 </head>
